--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "eslint-plugin-react": "7.11.0",
     "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-inline-svg-plugin": "2.2.6",
+    "html-webpack-plugin": "4.3.0",
     "jest": "^24.5.0",
     "mini-css-extract-plugin": "^0.6.0",
     "puppeteer": "^1.14.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.44.2",
+    "webpack": "4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
